--- a/Css/style.css
+++ b/Css/style.css
@@ -43,6 +43,10 @@ body.dark {
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
   background-color: var(--bg-color);
@@ -317,11 +321,13 @@ header.scrolled .logo{
   transition: 0.3s;
 }
 
-.nav-link:hover {
+.nav-link:hover, 
+.nav-link.active {
   color: var(--heading-color);
 }
 
-.nav-link:hover::after {
+.nav-link:hover::after, 
+.nav-link.active::after{
   width: 100%;
   opacity: 0.2;
 }
@@ -924,6 +930,7 @@ header.scrolled .logo{
 /* --------------- Testimonials Section Styling --------------- */
 
 .testimonials{
+  overflow: hidden;
   padding: var(--section-padding) 0 calc(var(--section-padding) + 120px);
 }
 
@@ -1111,7 +1118,82 @@ textarea.form-input{
 
 /* --------------- Subscription Section Styling --------------- */
 
+.subscription{
+  overflow: hidden;
+}
+
+.sub-box{
+  background-color: var(--bg-color-2);
+  padding: 5rem;
+  width: 100%;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 6rem;
+  align-items: center;
+}
+
+.sub-box .heading{
+  font-size: 2rem;
+  margin-top: 2rem;
+}
+
+.sub-box form{
+  display: grid;
+  grid-template-columns: 1fr auto;
+  column-gap: 1rem; 
+}
+
+.subscription .map{
+  position: absolute;
+  height: 150%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.15;
+}
+
+.subscription .square{
+  position: absolute;
+  left: 52%;
+  bottom: 7%;
+  transform: translate(0, -50%) scale(0.95);
+}
+
 /* --------------- Footer Styling --------------- */
+
+footer{
+  padding: 4rem 0;
+}
+
+footer .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+footer .social-media{
+  display: flex;
+}
+
+.social-link{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-left: 1rem;
+  background-color: var(--bg-color-1);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+.social-link:hover{
+  color: var(--main-color-1);
+}
 
 /* --------------- 1000px Screens --------------- */
 
