--- a/Css/style.css
+++ b/Css/style.css
@@ -5,7 +5,7 @@
 
 :root {
   --hue-1: 257;
-  --hue-2: 47; 
+  --hue-2: 47;
   --main-color-1: hsl(var(--hue-1), 100%, 60%);
   --main-color-dark-1: hsl(var(--hue-1), 69%, 50%);
   --main-color-2: hsl(var(--hue-2), 100%, 61%);
@@ -33,6 +33,32 @@ body.dark {
   --text-color: hsl(var(--hue-1), 14%, 51%);
 }
 
+body.dark .st1{
+  fill: hsl(var(--hue-1), 18%, 29%);
+} 
+
+body.dark .shape.square{
+  opacity: 0.07;
+}
+
+body.dark .toggle-btn {
+  background-color: var(--bg-color-3);
+}
+
+body.dark .toggle-btn:hover {
+  background-color: brightness(110%);
+}
+
+body.dark .nav-link:hover::after,
+body.dark .nav-link.active::after {
+  opacity: 0.6;
+}
+
+body.dark .form-input:hover{
+  filter: brightness(110%);
+}
+
+
 /* --------------- General Styles --------------- */
 
 *,
@@ -43,7 +69,7 @@ body.dark {
   box-sizing: border-box;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -51,9 +77,10 @@ body {
   overflow-x: hidden;
   background-color: var(--bg-color);
   font-family: "Poppins", sans-serif;
+  transition: 0.3s background-color;
 }
 
-body.stopScrolling{
+body.stopScrolling {
   height: 100%;
   overflow: hidden;
 }
@@ -73,15 +100,15 @@ ul {
 
 /* --------------- Reusable CSS Code --------------- */
 
-.container{
+.container {
   position: relative;
   width: 100%;
   max-width: 75rem;
   padding: 0 1.5rem;
-  margin: 0 auto;   
+  margin: 0 auto;
 }
 
-.logo{
+.logo {
   margin-right: 1.5rem;
   font-family: "Abril Fatface", cursive;
   font-size: 1.5rem;
@@ -103,22 +130,25 @@ ul {
   padding: 0.13rem 0.75rem;
   margin-bottom: 1rem;
   font-weight: 500;
+  transition: 0.3s color;
 }
 
-.heading{
+.heading {
   color: var(--heading-color);
   font-size: 3rem;
   font-family: "Abril Fatface", cursive;
   font-weight: 400;
   line-height: 1.3;
+  transition: 0.3s color;
 }
 
-.text{
+.text {
   color: var(--text-color);
   font-size: 0.9rem;
   margin: 2rem 0;
+  line-height: 2.3;
+  transition: 0.3s color;
 }
-
 
 .cta {
   margin-top: 3.5rem;
@@ -130,9 +160,9 @@ ul {
   margin-right: 1.5rem;
 }
 
-.btn{
+.btn {
   display: inline-block;
-  padding: .9rem 1.75rem;
+  padding: 0.9rem 1.75rem;
   border-radius: 17px;
   background-color: var(--main-color-1);
   color: #fff;
@@ -148,7 +178,7 @@ ul {
   transition: 0.3s;
 }
 
-.btn:hover{
+.btn:hover {
   background-color: var(--main-color-dark-1);
 }
 
@@ -165,7 +195,7 @@ ul {
   min-width: revert;
 }
 
-.btn.secondary-btn::before{
+.btn.secondary-btn::before {
   content: "";
   position: absolute;
   width: 0%;
@@ -180,13 +210,13 @@ ul {
   width: 100%;
 }
 
-.btn.secondary-btn.sm{
+.btn.secondary-btn.sm {
   padding: 0.07rem 0.1rem;
   font-size: 0.78rem;
   border-bottom-width: 2px;
 }
 
-.btn.secondary-btn.sm::before{
+.btn.secondary-btn.sm::before {
   height: 2px;
   bottom: -2px;
 }
@@ -196,16 +226,16 @@ ul {
   padding: var(--section-padding) 0;
 }
 
-
-.contact-form h3{
+.contact-form h3 {
   color: var(--heading-color);
   font-size: 1.3rem;
   font-weight: 500;
   margin-bottom: 1.6rem;
   line-height: 0.9;
+  transition: 0.3s color;
 }
 
-.form-input{
+.form-input {
   display: inline-block;
   padding: 0.9rem 1.5rem;
   background-color: var(--bg-color-3);
@@ -220,18 +250,17 @@ ul {
   transition: 0.3s;
 }
 
-.form-input::placeholder{
+.form-input::placeholder {
   color: var(--text-color);
 }
 
-.form-input:valid
-.form-input:focus{
+.form-input:valid .form-input:focus {
   filter: brightness(100%);
   background: var(--bg-color-1);
   border-color: var(--main-color-1);
 }
 
-.form-input:hover{
+.form-input:hover {
   filter: brightness(97%);
 }
 
@@ -246,12 +275,12 @@ ul {
 
 .square {
   width: 70px;
+  transition: 0.3s opacity;
 }
-
 
 /* --------------- Navbar Styling Start --------------- */
 
-header{
+header {
   position: fixed;
   top: 0;
   left: 0;
@@ -266,7 +295,7 @@ header.scrolled {
   backdrop-filter: blur(15px);
 }
 
-nav.container{
+nav.container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -277,7 +306,7 @@ header .logo {
   line-height: 120px;
 }
 
-header.scrolled .logo{
+header.scrolled .logo {
   height: 80px;
   line-height: 80px;
 }
@@ -307,7 +336,7 @@ header.scrolled .logo{
   transition: 0.3s;
 }
 
-.nav-link::after{
+.nav-link::after {
   content: "";
   position: absolute;
   width: 0;
@@ -321,13 +350,13 @@ header.scrolled .logo{
   transition: 0.3s;
 }
 
-.nav-link:hover, 
+.nav-link:hover,
 .nav-link.active {
   color: var(--heading-color);
 }
 
-.nav-link:hover::after, 
-.nav-link.active::after{
+.nav-link:hover::after,
+.nav-link.active::after {
   width: 100%;
   opacity: 0.2;
 }
@@ -354,7 +383,7 @@ header.scrolled .logo{
 
 /* --------------- Showcase Area Styling --------------- */
 
-.showcase-area{
+.showcase-area {
   padding: 120px 0;
   width: 100%;
   overflow: hidden;
@@ -373,11 +402,11 @@ header.scrolled .logo{
   margin-bottom: 0.7rem;
 }
 
-.showcase-area .heading{
+.showcase-area .heading {
   font-size: 3.5rem;
 }
 
-.showcase-area .text{
+.showcase-area .text {
   margin: 0.8rem 0;
 }
 
@@ -385,7 +414,11 @@ header.scrolled .logo{
   position: relative;
   width: 100%;
   min-height: calc(100% + 120px);
-  background-image: linear-gradient(124deg, var(--main-color-1) 53%, var(--main-color-2) 53%);
+  background-image: linear-gradient(
+    124deg,
+    var(--main-color-1) 53%,
+    var(--main-color-2) 53%
+  );
   margin-top: -120px;
   border-radius: 0 0 80px 80px;
 }
@@ -404,7 +437,7 @@ header.scrolled .logo{
   left: 0;
   top: 80%;
   transform: translate(-50%, -50%);
-} 
+}
 
 .showcase-area .dots {
   position: absolute;
@@ -421,7 +454,7 @@ header.scrolled .logo{
 }
 
 /* --------------- About Section Styling --------------- */
-.about .container{
+.about .container {
   display: grid;
   grid-template-columns: 1.05fr 1fr;
   align-items: center;
@@ -430,10 +463,10 @@ header.scrolled .logo{
   margin: 3rem 0 4rem;
 }
 
-.about-grid{
+.about-grid {
   display: grid;
   grid-template-columns: 190px 190px;
-  grid-template-rows: 190px 190px; 
+  grid-template-rows: 190px 190px;
   justify-content: center;
   column-gap: 2.5rem;
   row-gap: 100px;
@@ -441,7 +474,7 @@ header.scrolled .logo{
   position: relative;
 }
 
-.about-card{
+.about-card {
   background-color: var(--bg-color-2);
   width: 100%;
   height: 100%;
@@ -450,7 +483,7 @@ header.scrolled .logo{
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: 0.5s transform;
+  transition: 0.5s transform, 0.3s background-color;
 }
 
 .about-card:nth-child(1) {
@@ -477,10 +510,12 @@ header.scrolled .logo{
 
 .st0 {
   fill: var(--bg-color-3);
+  transition: 0.3s fill;
 }
 
 .st1 {
   fill: #c5e3ea;
+  transition: 0.3s fill;
 }
 
 .st2 {
@@ -488,12 +523,13 @@ header.scrolled .logo{
   transition: 0.3s;
 }
 
-.card h3{
+.about-card h3 {
   color: var(--heading-color);
   font-weight: 600;
   font-size: 1rem;
   margin-top: 1rem;
   letter-spacing: 0.3px;
+  transition: 0.3s color;
 }
 
 .about-card:hover {
@@ -504,7 +540,7 @@ header.scrolled .logo{
   fill: var(--main-color-1);
 }
 
-.about-grid::before{
+.about-grid::before {
   content: "";
   position: absolute;
   width: 210px;
@@ -516,7 +552,6 @@ header.scrolled .logo{
   z-index: -1;
   opacity: 0.07;
 }
-
 
 .about .triangle {
   position: absolute;
@@ -537,6 +572,7 @@ header.scrolled .logo{
   border-radius: 20px;
   width: 100%;
   position: relative;
+  transition: 0.3s background-color;
 }
 
 .box-desc {
@@ -547,7 +583,7 @@ header.scrolled .logo{
 }
 
 .skills-wrap {
-  display:grid;
+  display: grid;
   grid-template-columns: repeat(4, 150px);
   margin-top: 2rem;
   justify-content: space-between;
@@ -566,7 +602,7 @@ header.scrolled .logo{
   position: relative;
 }
 
-.sk-progress svg{
+.sk-progress svg {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -575,13 +611,14 @@ header.scrolled .logo{
   transform: translate(-50%, -50%) rotate(-90deg);
 }
 
-.sk-progress svg circle{
+.sk-progress svg circle {
   fill: var(--bg-color-3);
   stroke-width: 5px;
   stroke: var(--main-color-1);
   stroke-linecap: round;
   stroke-dasharray: 427;
   stroke-dashoffset: 427;
+  transition: 0.3s;
 }
 
 @keyframes progress {
@@ -590,7 +627,7 @@ header.scrolled .logo{
   }
 }
 
-.counter{
+.counter {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -599,9 +636,10 @@ header.scrolled .logo{
   color: var(--heading-color);
   font-weight: 400;
   font-size: 0.9rem;
+  transition: 0.3s color;
 }
 
-.counter span{
+.counter span {
   font-size: 2.45rem;
 }
 
@@ -610,6 +648,7 @@ header.scrolled .logo{
   margin-top: 0.75rem;
   font-weight: 400;
   font-size: 1rem;
+  transition: 0.3s color;
 }
 
 .skill .dots {
@@ -628,7 +667,7 @@ header.scrolled .logo{
 }
 /* --------------- Sevices Section Styling --------------- */
 
-.services .container{
+.services .container {
   display: grid;
   grid-template-columns: 1fr 1.3fr;
   column-gap: 6rem;
@@ -644,22 +683,25 @@ header.scrolled .logo{
   justify-items: flex-start;
 }
 
-.milestones h2{
+.milestones h2 {
   color: var(--main-color-1);
   font-size: 1.3rem;
+  transition: 0.3s color;
 }
 
 .milestones h2 span {
   font-size: 2rem;
   line-height: 1.2;
   margin-right: 0.1rem;
+  transition: 0.3s color;
 }
 
-.milestones h5{
+.milestones h5 {
   color: var(--heading-color);
   line-height: 0.9;
   font-weight: 500;
   font-size: 0.95rem;
+  transition: 0.3s color;
 }
 
 .services-grid {
@@ -670,7 +712,7 @@ header.scrolled .logo{
   row-gap: 4.4rem;
 }
 
-.srv-card{
+.srv-card {
   background-color: var(--bg-color-2);
   border-radius: 15px;
   padding: 2.5rem 2.1rem;
@@ -679,12 +721,14 @@ header.scrolled .logo{
   align-items: flex-start;
   justify-content: space-between;
   min-height: 200px;
+  transition: 0.3s background-color;
 }
 
 .srv-card h3 {
   color: var(--heading-color);
   font-weight: 500;
   font-size: 1.05rem;
+  transition: 0.3s color;
 }
 
 .srv-card .text {
@@ -700,7 +744,7 @@ header.scrolled .logo{
   transform: translateY(-2.2rem);
 }
 
-.aservices-grid::before{
+.aservices-grid::before {
   content: "";
   position: absolute;
   width: 210px;
@@ -713,14 +757,14 @@ header.scrolled .logo{
   opacity: 0.07;
 }
 
-.services .triangle{
+.services .triangle {
   top: 100%;
   left: 30%;
   position: absolute;
   transform: translate(-50%, -100%);
 }
 
-.services .square{
+.services .square {
   top: 75%;
   left: -15px;
   position: absolute;
@@ -730,7 +774,7 @@ header.scrolled .logo{
 
 /* --------------- Portfolio Section Styling --------------- */
 
-.portofolio .container{
+.portofolio .container {
   transition: 0.4s;
 }
 
@@ -758,28 +802,30 @@ header.scrolled .logo{
   margin-left: 1.3rem;
   font-family: inherit;
   text-transform: uppercase;
+  transition: 0.3s color;
 }
 
-.filter-btn.mixitup-control-active{
+.filter-btn.mixitup-control-active {
   color: var(--main-color-1);
 }
 
 .portofolio-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
 }
 
-.prt-card{
+.prt-card {
   border-radius: 15px;
   overflow: hidden;
   background-color: var(--bg-color-2);
   height: 265px;
   display: grid;
   grid-template-rows: 1fr auto;
+  transition: 0.3s background-color;
 }
 
-.prt-image{
+.prt-image {
   position: relative;
   overflow: hidden;
   display: flex;
@@ -788,17 +834,17 @@ header.scrolled .logo{
   cursor: pointer;
 }
 
-.prt-image img{
+.prt-image img {
   width: 105%;
 }
 
-.prt-desc{
+.prt-desc {
   padding: 1.1rem 1.6rem;
   display: flex;
   justify-content: space-between;
 }
 
-.prt-desc h3{
+.prt-desc h3 {
   font-size: 0.95rem;
   color: var(--heading-color);
   font-weight: 600;
@@ -809,8 +855,8 @@ header.scrolled .logo{
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   background-color: transparent;
   backdrop-filter: blur(0px);
   display: flex;
@@ -826,7 +872,7 @@ header.scrolled .logo{
   backdrop-filter: blur(10px);
 }
 
-.prt-icon{
+.prt-icon {
   color: hsl(var(--hue-1), 61%, 24%);
   font-size: 1.1rem;
   margin: 0 0.4rem;
@@ -843,18 +889,17 @@ header.scrolled .logo{
   transition: 0.3s;
 }
 
-.prt-icon:hover{
+.prt-icon:hover {
   background-color: var(--main-color-dark-2);
-
 }
 
-.prt-image:hover .prt-icon{
+.prt-image:hover .prt-icon {
   opacity: 1;
   transform: translateY(0px);
   transition: 0.3s var(--i);
 }
 
-.modal{
+.modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -863,7 +908,6 @@ header.scrolled .logo{
   overflow: hidden;
   z-index: 11;
   pointer-events: none;
-
 }
 
 .modal-overlay {
@@ -892,24 +936,24 @@ header.scrolled .logo{
   transition: 0.2s;
 }
 
-.slider-wrap img{
+.slider-wrap img {
   width: 100%;
   display: none;
   border-radius: 10px;
 }
 
-.navigation{
+.navigation {
   color: #fff;
   font-size: 2rem;
   cursor: pointer;
   padding: 2rem;
 }
 
-.slider-wrap img.showImage{
+.slider-wrap img.showImage {
   display: block;
 }
 
-.portofolio.open .modal{
+.portofolio.open .modal {
   pointer-events: auto;
 }
 
@@ -921,7 +965,7 @@ header.scrolled .logo{
   transform: scale(0.9);
 }
 
-.portofolio.open .slider-wrap{
+.portofolio.open .slider-wrap {
   transform: translate(-50%, -50%);
   opacity: 1;
   transition: 0.45s 0.1s;
@@ -929,29 +973,30 @@ header.scrolled .logo{
 
 /* --------------- Testimonials Section Styling --------------- */
 
-.testimonials{
+.testimonials {
   overflow: hidden;
   padding: var(--section-padding) 0 calc(var(--section-padding) + 120px);
 }
 
-.testimonials .container{
+.testimonials .container {
   display: grid;
   grid-template-columns: 1.2fr 1fr;
   align-items: center;
 }
 
-.swiper{
+.swiper {
   width: 100%;
   background-color: var(--bg-color-2);
   border-radius: 15px;
-  padding: 2rem 0 2.5rem;
+  padding: 4rem 0 2.5rem;
+  transition: 0.3s background-color;
 }
 
-.swiper-slide{
+.swiper-slide {
   padding: 0 2.5rem;
 }
 
-.client{
+.client {
   display: grid;
   grid-template-columns: 85px 1fr;
   align-items: center;
@@ -962,20 +1007,22 @@ header.scrolled .logo{
   width: 100%;
 }
 
-.client-info h4{
+.client-info h4 {
   font-weight: 500;
   color: var(--heading-color);
   margin-bottom: 0.3rem;
   font-size: 1.05rem;
+  transition: 0.3s color;
 }
 
-.client-info h5{
+.client-info h5 {
   color: var(--text-color);
   font-weight: 500;
   font-size: 0.8rem;
+  transition: 0.3s color;
 }
 
-.client-info h5 a{
+.client-info h5 a {
   color: var(--main-color-1);
 }
 
@@ -984,7 +1031,7 @@ header.scrolled .logo{
   margin: 1.5rem 0 0;
 }
 
-.swiper-pagination{
+.swiper-pagination {
   position: static;
   display: flex;
   align-items: center;
@@ -1000,7 +1047,7 @@ header.scrolled .logo{
   cursor: pointer;
 }
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
   opacity: 1;
   width: 11px;
   height: 11px;
@@ -1023,22 +1070,22 @@ header.scrolled .logo{
   left: 50%;
   transform: translateX(calc(-50% + 120px));
   background-image: linear-gradient(
-    55deg, 
+    55deg,
     var(--main-color-2) 20%,
-    var(--main-color-1) 20%  
+    var(--main-color-1) 20%
   );
   border-bottom-left-radius: 60px;
   z-index: -1;
 }
 
-.section-background .person{
+.section-background .person {
   position: absolute;
   height: 450px;
   bottom: 0;
   right: 0;
 }
 
-.section-background .circle{
+.section-background .circle {
   position: absolute;
   width: 170px;
   left: 45%;
@@ -1046,7 +1093,7 @@ header.scrolled .logo{
   transform: translate(-50%, -50%);
 }
 
-.section-background .square{
+.section-background .square {
   position: absolute;
   width: 170px;
   left: 77%;
@@ -1056,20 +1103,20 @@ header.scrolled .logo{
 
 /* --------------- Contact Section Styling --------------- */
 
-.contact .container{
+.contact .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 4rem;
 }
 
-.mail{
+.mail {
   color: var(--main-color-1);
   font-weight: 500;
   font-size: 1.1rem;
   transition: 0.3s;
 }
 
-.mail i{
+.mail i {
   display: inline-block;
   font-size: 1.5rem;
   margin-left: 2px;
@@ -1077,11 +1124,11 @@ header.scrolled .logo{
   transition: 0.3s margin-left;
 }
 
-.mail:hover{
+.mail:hover {
   color: var(--main-color-dark-1);
 }
 
-.mail:hover i{
+.mail:hover i {
   margin-left: 10px;
 }
 
@@ -1091,25 +1138,26 @@ header.scrolled .logo{
   padding: 3.5rem 3rem;
   display: flex;
   flex-direction: column;
+  transition: 0.3s background-color;
 }
 
-textarea.form-input{
+textarea.form-input {
   resize: none;
-  min-height: 1.5rem;
+  min-height: 170px;
 }
 
-.contact-form .form-input{
+.contact-form .form-input {
   margin-bottom: 1.5rem;
 }
 
-.contact .square{
+.contact .square {
   position: absolute;
   left: 17%;
   bottom: 15%;
   transform: translate(-50%, -50%);
 }
 
-.contact .triangle{
+.contact .triangle {
   position: absolute;
   left: 90%;
   bottom: 98%;
@@ -1118,11 +1166,11 @@ textarea.form-input{
 
 /* --------------- Subscription Section Styling --------------- */
 
-.subscription{
+.subscription {
   overflow: hidden;
 }
 
-.sub-box{
+.sub-box {
   background-color: var(--bg-color-2);
   padding: 5rem;
   width: 100%;
@@ -1131,20 +1179,21 @@ textarea.form-input{
   grid-template-columns: 1fr 1fr;
   column-gap: 6rem;
   align-items: center;
+  transition: 0.3s color;
 }
 
-.sub-box .heading{
+.sub-box .heading {
   font-size: 2rem;
   margin-top: 2rem;
 }
 
-.sub-box form{
+.sub-box form {
   display: grid;
   grid-template-columns: 1fr auto;
-  column-gap: 1rem; 
+  column-gap: 1rem;
 }
 
-.subscription .map{
+.subscription .map {
   position: absolute;
   height: 150%;
   top: 50%;
@@ -1154,7 +1203,7 @@ textarea.form-input{
   opacity: 0.15;
 }
 
-.subscription .square{
+.subscription .square {
   position: absolute;
   left: 52%;
   bottom: 7%;
@@ -1163,22 +1212,22 @@ textarea.form-input{
 
 /* --------------- Footer Styling --------------- */
 
-footer{
+footer {
   padding: 4rem 0;
 }
 
-footer .container{
+footer .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
 
-footer .social-media{
+footer .social-media {
   display: flex;
 }
 
-.social-link{
+.social-link {
   width: 35px;
   height: 35px;
   border-radius: 50%;
@@ -1191,7 +1240,7 @@ footer .social-media{
   transition: 0.3s;
 }
 
-.social-link:hover{
+.social-link:hover {
   color: var(--main-color-1);
 }
 
