--- a/Css/style.css
+++ b/Css/style.css
@@ -313,7 +313,7 @@ header.scrolled .logo {
 
 .links {
   flex: 1;
-  display: flex;
+  display: flex; 
   justify-content: space-between;
 }
 
@@ -379,6 +379,46 @@ header.scrolled .logo {
 
 .toggle-btn:hover {
   filter: brightness(97%);
+}
+
+.hamburger {
+  display: none;
+  padding: 1rem 0;
+  height: 12px;
+  width: 25px;
+  box-sizing: content-box;
+  cursor: pointer;
+  position: relative;
+}
+
+.hamburger .bar{
+  width: 100%;
+  height: 2px;
+  background-color: var(--heading-color);
+  border-radius: 3px;
+  position: absolute;
+}
+
+.hamburger .bar:first-child {
+  top: 1rem;
+  transition: top 0.2s 0.15s, transform 0.3s;
+}
+
+.hamburger .bar:last-child {
+  bottom: 1rem;
+  transition: bottom 0.2s 0.15s, transform 0.3s;
+}
+
+body.open .hamburger .bar:first-child {
+  top: 50%;
+  transform: translateY(-50%) rotate(-45deg);
+  transition: top 0.2s, transform 0.3s 0.1s;
+}
+
+body.open .hamburger .bar:last-child {
+  bottom: 50%;
+  transform: translateY(50%) rotate(45deg);
+  transition: bottom 0.2s, transform 0.3s 0.1s;
 }
 
 /* --------------- Showcase Area Styling --------------- */
@@ -1349,18 +1389,132 @@ footer .social-media {
   }
 
   .triangle {
-    width: 95px;
-    opacity: 0.18;
+    width: 70px;
   }
 
   .dots {
-    width: 112px;
+    width: 65px;
   }
 
   .square {
-    width: 70px;
-    transition: 0.3s opacity;
+    width: 55px;
   }
+
+  .hamburger {
+    display: block;
+  }
+
+  .links {
+    order: 3;
+    flex-basis: 100%; /* width: 100% */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 0 2rem;
+    opacity: 0;
+    transition: 0.3s;
+  }
+
+  header nav {
+    justify-content: space-between;
+  }
+
+  .links ul {
+    position: relative;
+    flex-direction: column;
+  }
+
+  .nav-link {
+    margin: 1.5rem 0;
+    color: var(--heading-color);
+    font-weight: 500;
+  }
+
+  .toggle-btn {
+    margin: 0;
+  }
+
+  .links ul::after {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 0.5px;
+    background-color: var(--heading-color);
+    opacity: 0;
+    top: -0.5rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.3s;
+  }
+
+  .overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 6;
+    opacity: 0;
+    transition: 0.3s;
+    pointer-events: none;
+  }
+
+  header {
+    height: 505px;
+    max-height: 100px;
+    overflow: hidden;
+  }
+
+  header.scrolled {
+    height: 485px;
+    max-height: 80px;
+  }
+
+  body.open header {
+    max-height: 505px;
+    background-color: var(--bg-color-2);
+  }
+
+  body.open .overlay {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  body.open .links ul::after {
+    opacity: 0.7;
+    width: 100%;
+  }
+
+  body.open header.scrolled {
+    max-height: 485px;
+  }
+
+  body.open .links {
+    opacity: 1;
+  }
+
+  .showcase-area .container{
+    grid-template-columns: 1fr;
+    height: revert;
+    justify-items: center;
+    row-gap: 4rem;
+  }
+
+  .showcase-image {
+    min-height: revert;
+    height: 100vw;
+    max-height: 570px;
+    max-width: 450px;
+    margin-top: 0px;
+    border-radius: 40px;
+  }
+
+  .showcase-area .text {
+    margin: 0.2rem 0;
+  }
+
+  
 }
 
 /* --------------- 500px Screens --------------- */
