--- a/Css/style.css
+++ b/Css/style.css
@@ -33,11 +33,11 @@ body.dark {
   --text-color: hsl(var(--hue-1), 14%, 51%);
 }
 
-body.dark .st1{
+body.dark .st1 {
   fill: hsl(var(--hue-1), 18%, 29%);
-} 
+}
 
-body.dark .shape.square{
+body.dark .shape.square {
   opacity: 0.07;
 }
 
@@ -54,10 +54,9 @@ body.dark .nav-link.active::after {
   opacity: 0.6;
 }
 
-body.dark .form-input:hover{
+body.dark .form-input:hover {
   filter: brightness(110%);
 }
-
 
 /* --------------- General Styles --------------- */
 
@@ -313,7 +312,7 @@ header.scrolled .logo {
 
 .links {
   flex: 1;
-  display: flex; 
+  display: flex;
   justify-content: space-between;
 }
 
@@ -391,7 +390,7 @@ header.scrolled .logo {
   position: relative;
 }
 
-.hamburger .bar{
+.hamburger .bar {
   width: 100%;
   height: 2px;
   background-color: var(--heading-color);
@@ -760,7 +759,7 @@ body.open .hamburger .bar:last-child {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  min-height: 200px;
+  min-height: 280px;
   transition: 0.3s background-color;
 }
 
@@ -1076,8 +1075,8 @@ body.open .hamburger .bar:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 5px;
-}
+  height: 11px;
+ }
 
 .swiper-pagination-bullet {
   background-color: var(--main-color-1);
@@ -1219,7 +1218,7 @@ textarea.form-input {
   grid-template-columns: 1fr 1fr;
   column-gap: 6rem;
   align-items: center;
-  transition: 0.3s color;
+  transition: 0.3s background-color;
 }
 
 .sub-box .heading {
@@ -1311,11 +1310,11 @@ footer .social-media {
     min-width: 100px;
   }
 
-  .btn.secondary-btn{
+  .btn.secondary-btn {
     font-size: 0.85rem;
   }
 
-  .form-input{
+  .form-input {
     padding: 0.8rem 1.45rem;
     border-radius: 15px;
     font-size: 0.8rem;
@@ -1330,7 +1329,7 @@ footer .social-media {
     line-height: 100px;
   }
 
-  .nav-link{
+  .nav-link {
     font-size: 0.7rem;
   }
 
@@ -1338,7 +1337,7 @@ footer .social-media {
     padding: 100px 0;
   }
 
-  .showcase-area .container{
+  .showcase-area .container {
     grid-template-columns: 1fr 400px;
     height: 450px;
   }
@@ -1354,11 +1353,11 @@ footer .social-media {
   .services .container {
     column-gap: 2.5rem;
   }
-  .contact .container{
+  .contact .container {
     column-gap: 2.5rem;
   }
 
-  .contact-form{
+  .contact-form {
     padding: 2.5rem 2rem;
   }
 
@@ -1385,7 +1384,7 @@ footer .social-media {
 
 @media (max-width: 768px) {
   :root {
-    --section-padding : 4.5rem;
+    --section-padding: 4.5rem;
   }
 
   .triangle {
@@ -1494,7 +1493,7 @@ footer .social-media {
     opacity: 1;
   }
 
-  .showcase-area .container{
+  .showcase-area .container {
     grid-template-columns: 1fr;
     height: revert;
     justify-items: center;
@@ -1510,14 +1509,338 @@ footer .social-media {
     border-radius: 40px;
   }
 
+  .showcase-info {
+    width: 100%;
+    margin-top: 1rem;
+  }
+
   .showcase-area .text {
     margin: 0.2rem 0;
   }
 
-  
+  .cta {
+    margin-top: 1rem;
+  }
+
+  .showcase-area .circle {
+    width: 120px;
+  }
+
+  .showcase-area .square {
+    left: 80%;
+    top: 20%;
+  }
+
+  .about .container {
+    grid-template-columns: 1fr;
+  }
+
+  .about-grid {
+    order: 3;
+  }
+
+  .heading br {
+    display: none;
+  }
+
+  .about .text {
+    margin: 1rem 0 1.5rem;
+  }
+
+  .about-grid {
+    grid-template-columns: 150px 150px;
+    grid-template-rows: 150px 150px;
+    margin: 2.5rem 0 0 0;
+    column-gap: 2rem;
+    row-gap: 80px;
+  }
+
+  .icon {
+    width: 50px;
+  }
+
+  .about-card h3 {
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+  }
+
+  .about-grid::before {
+    width: 150px;
+    height: 150px;
+    border-width: 10px;
+  }
+
+  .box-desc {
+    grid-template-columns: 1fr;
+    justify-items: flex-start;
+  }
+
+  .skills-wrap {
+    grid-template-columns: repeat(2, 150px);
+    row-gap: 1rem;
+  }
+
+  .sk-title {
+    margin-top: 0;
+  }
+
+  .services .container {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+
+  .services .text {
+    margin: 1.5rem 0 0.5rem;
+  }
+
+  .services-grid {
+    margin-top: 3.5rem;
+    column-gap: 1.5rem;
+    row-gap: 3.5rem;
+    max-width: 600px;
+  }
+
+  .srv-card {
+    padding: 1.8rem 1.7rem;
+    min-height: 260px;
+  }
+
+  .srv-card h3 {
+    font-size: 0.9rem;
+  }
+
+  .srv-card .text {
+    margin: 0.4rem 0 0.8rem;
+  }
+
+  .portofolio-title {
+    padding-bottom: 0;
+  }
+
+  .testimonials {
+    padding: var(--section-padding) 0;
+  }
+
+  .testimonials .container {
+    position: revert;
+    grid-template-columns: 1fr;
+    max-width: 620px;
+  }
+
+  .section-background {
+    transform: translateX(0);
+    left: 0;
+    border-radius: 0;
+    top: 0;
+    height: 100%;
+    transform: translateX(calc(-50% + 120px));
+    background-image: linear-gradient(
+      45deg,
+      var(--main-color-2) 17%,
+      var(--main-color-1) 17%
+    );
+  }
+
+  .section-background .person,
+  .section-background .circle {
+    display: none;
+  }
+
+  .swiper {
+    order: 2;
+    padding: 2rem 0;
+  }
+
+  .testimonials-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 0 3rem 0;
+  }
+
+  .swiper-slide {
+    padding: 0 2rem;
+  }
+
+  .swiper-slide .text {
+    margin: 1rem 0 0;
+  }
+
+  .swiper-pagination {
+    margin-top: 3rem;
+  }
+
+  .client {
+    grid-template-columns: 65px 1fr;
+  }
+
+  .client-info h4 {
+    margin-bottom: 0.2rem;
+    font-size: 0.97rem;
+  }
+
+  .client-info h5 {
+    font-size: 0.7rem;
+  }
+
+  .section-background .square {
+    left: 86%;
+    top: 12%;
+    width: 60px;
+  }
+
+  .contact .container {
+    grid-template-columns: 1fr;
+    row-gap: 3rem;
+  }
+
+  .contact .square {
+    width: 60px;
+    bottom: 68%;
+    left: 75%;
+  }
+
+  .contact .triangle {
+    left: 20%;
+    top: 101%;
+  }
+
+  .sub-box{
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+
+  .sub-box .heading {
+    margin-top: 0rem;
+  }
+
+  .subscription .square {
+    width: 60px;
+    left: 65%;
+    bottom: 30%;
+  }
+
 }
 
 /* --------------- 500px Screens --------------- */
 
 @media (max-width: 500px) {
+  .container {
+    padding: 0 1rem;
+  }
+
+  .showcase-area .square {
+    display: none;
+  }
+
+  .showcase-area .container {
+    row-gap: 4.5rem;
+  }
+
+  .showcase-area .heading {
+    font-size: 2.4rem;
+  }
+
+  .skills-box {
+    padding: 3rem 2.5rem;
+  }
+
+  .skills-wrap {
+    grid-template-columns: 1fr;
+    row-gap: 1.5rem;
+  }
+
+  .services-grid {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+
+  .srv-card {
+    transform: none !important;
+    min-height: auto;
+  }
+
+  .portofolio-header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .portofolio-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .filter-btns {
+    margin-top: 1rem;
+  }
+
+  .portofolio .slider-wrap {
+    width: calc(100% - 2rem);
+    grid-template-columns: 50px 1fr 50px;
+  }
+
+  .images {
+    grid-column: 1/4;
+    grid-row: 1/2;
+  }
+
+  .prev-btn {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    z-index: 1;
+    color: #333;
+  }
+
+  .next-btn {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    z-index: 1;
+    color: #333;
+  }
+
+  .contact-form p {
+    font-size: 1.2rem;
+  }
+
+  .sub-box {
+    padding: 3rem 2.2rem;
+    row-gap: 0.5rem;
+  }
+
+  .sub-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .sub-box .heading {
+    font-size: 1.7rem;
+  }
+
+  .subscription .square {
+    display: none;
+  }
+
+  .subscription form {
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+    justify-items: center;
+  }
+
+  footer {
+    padding: var(--section-padding) 0 1rem;
+  }
+
+  footer .text {
+    order: 3;
+    flex-basis: 100%;
+    text-align: center;
+    margin-top: 1rem;
+  }
+
 }
